# one_plus_epsilon

./: README.md  pyproject.toml
docs/: constructive_proof.md
one_plus_epsilon/: __init__.py  __main__.py  cli.py  polynomial.py  root_of_unity.py
tests/: test_root_of_unity.py
